<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bhamashah_ecard"
            android:checked="true"
            android:icon="@drawable/ic_ecard"
            android:title="@string/get_bhamashah_ecard" />
        <item
            android:id="@+id/nav_hof_details"
            android:icon="@drawable/ic_hof"
            android:title="@string/hof_details" />
        <item
            android:id="@+id/nav_family_details"
            android:icon="@drawable/ic_family"
            android:title="@string/family_details" />

        <item
            android:id="@+id/nav_account_details"
            android:icon="@drawable/ic_account"
            android:title="@string/account_details" />

      <!--  <item
            android:id="@+id/nav_bsby_status"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/bsby_status" />-->
    </group>
    <item android:title="@string/about_bhamashah">
        <menu>
            <item
                android:id="@+id/nav_bhamashah_yojna"
                android:icon="@drawable/ic_about"
                android:title="@string/about_bhamashah_yojna" />

            <item
                android:id="@+id/nav_nearby_hospitals"
                android:icon="@drawable/ic_hospitals"
                android:title="@string/about_blinked_hospitals" />

        </menu>
    </item>
    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/rate_app" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit"
                android:title="@string/exit_app" />
        </menu>
    </item>

</menu>
