<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:id="@+id/ss_front"
        android:background="@color/colorCardGreen"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorCardOrange"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.25"
                android:src="@drawable/national_logo" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/rajasthan_govt"
                    android:textColor="#222222"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="2dp"
                    android:gravity="center_horizontal"
                    android:text="@string/bhamashah_ecard"
                    android:textColor="#222222"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="0.25"
                android:src="@drawable/logo_bhamashah_card" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivmid"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@id/top"
            android:scaleType="fitXY"
            android:src="@drawable/bhamashah_bg_front" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivmid"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:layout_weight="0.25"
                    android:gravity="right"
                    android:padding="2dp"
                    android:text="@string/family_id_ecard" />

                <TextView
                    android:id="@+id/tv_family_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:padding="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:orientation="vertical">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_hof"
                        android:layout_width="85dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        app:riv_border_color="#bbffffff"
                        app:riv_border_width="1dip"
                        app:riv_corner_radius="5dip"
                        app:riv_mutate_background="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:text="@string/hof"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:padding="4dp"
                            android:text="@string/name" />

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:padding="4dp"
                            android:text="Rudi devi" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:padding="4dp"
                            android:text="@string/gender" />

                        <TextView
                            android:id="@+id/tv_gender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:padding="4dp"
                            android:text="Rudi devi" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:padding="4dp"
                            android:text="@string/dob" />

                        <TextView
                            android:id="@+id/tv_dob"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:padding="4dp"
                            android:text="Rudi devi" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:padding="4dp"
                            android:text="@string/aadhar_id" />

                        <TextView
                            android:id="@+id/tv_aadhar_id"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:padding="4dp"
                            android:text="Rudi devi" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:padding="4dp"
                            android:text="@string/account_no" />

                        <TextView
                            android:id="@+id/tv_account_no"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:padding="4dp"
                            android:text="" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:padding="4dp"
                            android:text="@string/ration_card_no" />

                        <TextView
                            android:id="@+id/tv_ration_card"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.6"
                            android:padding="4dp"
                            android:text="Rudi devi" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/cm" />
    </RelativeLayout>
</LinearLayout>